test/fail/ambiguous-reference.grace
constructor inherit {
  def name = object {}
}

def name = object {}

object {
  inherits inherit

  name
}

